--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -120,7 +120,6 @@ nav#nav-logo {
 }
 
 #mobile-demo.side-nav {
-	width: 500px;
 
 	li {
 		//margin: 5% 15%;
