--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -107,6 +107,10 @@
 
 	    p {
 	    	@extend .flow-text;
+
+			@media only screen and (max-width: $medium-screen) {
+				font-size: 2.4rem;
+			}
 	    }
 	}
 
