--- a/app/assets/stylesheets/scss_variables.scss
+++ b/app/assets/stylesheets/scss_variables.scss
@@ -68,5 +68,5 @@ $posts-index-post-height: 400px;
 
 $index-post-height: 500px;
 $index-post-width: $index-post-height;
-$index-post-height-mobile: 500px;
+$index-post-height-mobile: 600px;
 $index-post-width-mobile: $index-post-height-mobile;
